un poco de color

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,6 @@
         <title>Hello coursera</title>
     </head>
     <body>
-        <h1>hello coursera</h1>
+        <h1>AGUANTEN LAS PUTAS!!</h1>
     </body>
 </html>
