--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>Hello coursera</title>
+        <meta charset="utf-8">
+        <title>ALEX PROBANDO COSAS</title>
     </head>
     <body>
-        <h1>AGUANTEN LAS PUTAS!!</h1>
+        <div>DIV 1: CARGA PRIMERO</div>
+        <div>DIV 2: CARGA SEGUNDO</div>
+        <span>SPAN 1: carga tercero</span>
+        <div>
+            DIV 3: carga despues
+            <span>SPAN esta en bloque y carga aca</span>
+            DIV continuacion
+        </div>
+        <div>
+            <h1>H1 se ve asi porque es mas importante</h1>
+            <h2>H2 va a ser mas pequeña</h2>
+            <h3>H3 mas aun</h3>
+            <h4>Pero solo es estructural, no es para styling</h4>
+            <h5>bla</h5>
+            <h1>H es importancia pero igualmente carga de top a bottom, de arriba hacia abajo</h1>
+            <h6>bla</h6>
+        </div>
+
     </body>
 </html>
