--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
         <title>ALEX PROBANDO COSAS</title>
     </head>
     <body>
+        <div><h1 id="titulo">ALEX Probando cosas</h1></div>
         <div>DIV 1: CARGA PRIMERO</div>
         <div>DIV 2: CARGA SEGUNDO</div>
         <span>SPAN 1: carga tercero</span>
@@ -21,7 +22,46 @@
             <h5>bla</h5>
             <h1>H es importancia pero igualmente carga de top a bottom, de arriba hacia abajo</h1>
             <h6>bla</h6>
-        </div>
+            <h1>LISTAS</h1>
+            <ul>
+                <li><h2>Unordered List ul</h2></li>
+                <li>Levantarse</li>
+                <li>Estirarse</li>
+                <li>Bañarse
+                    <ul>
+                        <li>Brazos</li>
+                        <li>Cuerpo</li>
+                        <li>Piernas</li>
+                    </ul>   
+                </li>
+                <li>Desayunar</li>
+                <li>Hacer algo por la vida</li>
+                <li><h2>Ordered List ol</h2>
+                    <ol>
+                        <li>Despues esto</li>
+                        <li>Despues lo otro</li>
+                        <li>Y asi con numeritos</li>
+                    </ol>
+                </li>
+            </ul>
 
-    </body>
+        </div>
+        <h1>Internal Links </h1>
+        <h2>&lt;a href= "pagina interna html"  title="el nombre que aparece arriba"
+            <a href="same-directory-html" title="Same Directory">Linking to a file in the same directory</a>
+        </h2>
+        <a href="same-directory-html" title="Same Directory">
+            <div>DIV Linking to a file in the same directory</div>
+        </a>
+        <h1>External Links - se añade target= "_blank"</h1>
+        <p>Para abrir una pagina en nueva pestaña y no en tu pagina
+            <a href="https://www.instagram.com/alex.plays.bass/" target="_blank" title="MY INSTAGRAM">ACA ESTA MI INSTAGRAM</a>
+        </p>
+        <h1>LINKS to section</h1>
+        <p>Tenes que poner id="elnombre" y en el link href="#elnombre"</p>
+        <h2><a href="#titulo">Este te lleva al titulo</a></h2>
+
+
+
+    </body> 
 </html>
