--- a/site/index with CSS.html
+++ b/site/index with CSS.html
@@ -40,6 +40,22 @@
                 cursor: pointer;
                 
             }
+            #left-box {
+                background-color: coral;
+                width: 50%;
+                border-width: 1px;
+                border-color: cornsilk;
+                padding: 10px;
+                float: left;
+            }
+            #right-box {
+                background-color: coral;
+                width: 50%;
+                border-width: 1px;
+                border-color: cornsilk;
+                padding: 10px;
+                float: right;
+            }
 
         </style>
     </head>
