--- a/CIT-WEB/index.html
+++ b/CIT-WEB/index.html
@@ -13,7 +13,7 @@
             <nav class="navbar navbar-expand-sm d-none d-md-block mb-5">
                 <div class="container-fluid">
                     <span class="navbar-text d-none d-md-block">
-                        <img src="/images/CIT-LOGO-SOLO.png" alt="logo" width="50px"> Cripto In Time
+                        <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="50px"> Cripto In Time
                     </span>
                     <ul class="navbar-nav">
                       <li class="nav-item">
@@ -29,7 +29,7 @@
                     </ul>
                     <span class="navbar-text d-none d-md-block">
                       Cripto In Time
-                      <img src="/images/CIT-LOGO-SOLO.png" alt="logo" width="50px">
+                      <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="50px">
                     </span>
                   </div>
                 </div>
