--- a/CIT-WEB/index.html
+++ b/CIT-WEB/index.html
@@ -88,15 +88,18 @@
         </header>
         <div class="container-fluid">
             <div class="row align-items-start justify-content-center fst-italic">
-                <div id="content" class="col-5">
+                <div id="content" class="col-sm-6 col-md-6 col-lg-3">
                     <p class="text-center">Center aligned text on all viewport sizes.</p>
                 </div>
-                <div class=" col-1 col-sm-1 col-md-2 col-lg-4">
-
+                <div id="content" class="col-sm-6 col-md-6 col-lg-3">
+                    <p class="text-center">1 MONTH PRICE = 15$</p>
                 </div>
-                <div id="content" class="col-5">
-                    <p class="text-center">Center aligned text on all viewport sizes.</p>
-                </div>
+                <div id="content" class="col-sm-6 col-md-6 col-lg-3">
+                  <p class="text-center">3 MONTH PRICE = 30$</p>
+              </div>
+              <div id="content" class="col-sm-6 col-md-6 col-lg-3">
+                <p class="text-center">1 YEAR PRICE = 100$</p>
+            </div>
 
             </div>
         </div>
