--- a/CIT-WEB/index.html
+++ b/CIT-WEB/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cripto In Time</title>
+    <link rel="shortcut icon" type="image/png" href="images/CIT-LOGO-SOLO.png"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -88,20 +89,54 @@
         </header>
         <div class="container-fluid">
             <div class="row align-items-start justify-content-center fst-italic">
-                <div id="content" class="col-sm-6 col-md-6 col-lg-3">
-                    <p class="text-center">Center aligned text on all viewport sizes.</p>
+                <div id="content" class="col-sm-6 col-md-6 col-lg-4 text-wrap">
+                    <p class="text-center text-wrap p-2">QUE ES UNA WALLET?<br>
+                      El término wallet hace referencia a una cartera, billetera
+                      o monedero virtual en el que podemos gestionar
+                      nuestros activos criptográficos. Es un software o
+                      hardware diseñado exclusivamente para almacenar y
+                      gestionar las claves públicas y claves privadas de
+                      nuestras criptomonedas <br>
+                      Tipos de wallets: <br>
+                      Wallets calientes: Las wallets calientes son aquellas que están en línea. Su
+                      principal característica es que se puede ingresar a ellas desde cualquier
+                      dispositivo con acceso a internet. Por eso, están más expuestas a las
+                      artimañas de los piratas informáticos. <br>
+                      Wallets frias: Por el contrario a las billeteras calientes, las wallets frías
+                      almacenan las criptomonedas fuera de la red. En este caso, existen tres
+                      subtipos: De escritorio (se descargan e instalan en un dispositivo), de
+                      hardware (es un dispositivo, comunmente un USB donde almacenas tus
+                      claves privadas), y las carteras de papel (codigo QR impreso en un papel). <br>
+                      Cripto In Time &copy;</p>
                 </div>
-                <div id="content" class="col-sm-6 col-md-6 col-lg-3">
-                    <p class="text-center">1 MONTH PRICE = 15$</p>
+                <div id="promos" class="col-sm-6 col-md-6 col-lg-8 row g-3">
+                    <div>
+                      <a target="_blank" href="https://www.paypal.com/es/home">
+                        <button class="paypal-button" href="">1 Month 15$ PayPal</button>
+                      </a>
+                      <a target="_blank" href="https://www.skrill.com/en/?gclsrc=ds&gclsrc=ds">
+                        <button class="skrill-button">1 Month 15$ Skrill</button>
+                      </a>
+                    </div>
+                    <div>
+                      <a target="_blank" href="https://www.paypal.com/es/home">
+                        <button class="paypal-button">3 Months 30$ PayPal</button>
+                      </a>
+                      <a target="_blank" href="https://www.skrill.com/en/?gclsrc=ds&gclsrc=ds">
+                        <button class="skrill-button">3 Months 30$ Skrill</button>
+                      </a>
+                    </div>
+                    <div>
+                      <a target="_blank" href="https://www.paypal.com/es/home">
+                        <button class="paypal-button">1 Year 100$ PayPal</button>
+                      </a>
+                      <a target="_blank" href="https://www.skrill.com/en/?gclsrc=ds&gclsrc=ds">
+                        <button class="skrill-button">1 Year 100$ Skrill</button>
+                      </a>
+                    </div>
                 </div>
-                <div id="content" class="col-sm-6 col-md-6 col-lg-3">
-                  <p class="text-center">3 MONTH PRICE = 30$</p>
-              </div>
-              <div id="content" class="col-sm-6 col-md-6 col-lg-3">
-                <p class="text-center">1 YEAR PRICE = 100$</p>
-            </div>
 
-            </div>
+              </div>
         </div>
     
 
