--- a/CIT-WEB/index.html
+++ b/CIT-WEB/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cripto In Time</title>
+    <title>Crypto In Time</title>
     <link rel="shortcut icon" type="image/png" href="images/CIT-LOGO-SOLO.png"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
             <nav class="navbar navbar-expand-sm d-none d-md-block mb-5">
                 <div class="container-fluid">
                     <span class="navbar-text d-none d-md-block">
-                        <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="40px"> Cripto In Time
+                        <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="40px"> Crypto In Time
                     </span>
                     <ul class="navbar-nav">
                       <li class="nav-item">
@@ -29,7 +29,7 @@
                       </li>
                     </ul>
                     <span class="navbar-text d-none d-md-block">
-                      Cripto In Time
+                      Crypto In Time
                       <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="50px">
                     </span>
                   </div>
@@ -38,7 +38,7 @@
               <nav class="navbar navbar-expand-sm d-none d-sm-block d-md-none mb-5">
                 <div class="container-fluid justify-content-center">
                     <span class="navbar-text d-none d-md-block">
-                        Cripto In Time
+                        Crypto In Time
                     </span>
                     <ul class="navbar-nav">
                       <li class="nav-item">
@@ -55,7 +55,7 @@
                       </li>
                     </ul>
                     <span class="navbar-text d-none d-md-block">
-                      Cripto In Time
+                      Crypto In Time
                     </span>
                   </div>
                 </div>
@@ -65,7 +65,7 @@
                     <ul class="navbar-nav">
                       <li class="navbar-text d-block d-sm-none">
                         <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="50px">
-                        Cripto In Time
+                        Crypto In Time
                         <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="50px">
                       </li>
                       <li class="nav-item">
@@ -80,7 +80,7 @@
                       </li>
                     </ul>
                     <span class="navbar-text d-none d-md-block">
-                      Cripto In Time
+                      Crypto In Time
                     </span>
                   </div>
                 </div>
@@ -107,7 +107,7 @@
                       subtipos: De escritorio (se descargan e instalan en un dispositivo), de
                       hardware (es un dispositivo, comunmente un USB donde almacenas tus
                       claves privadas), y las carteras de papel (codigo QR impreso en un papel). <br>
-                      Cripto In Time &copy;</p>
+                      Crypto In Time &copy;</p>
                 </div>
                 <div id="promos" class="col-sm-6 col-md-6 col-lg-8 row g-3">
                     <div>
