--- a/CIT-WEB/index.html
+++ b/CIT-WEB/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
         <header>
-            <nav class="navbar navbar-expand-sm d-none d-md-block mb-5">
+            <nav class="navbar navbar-expand-sm d-none d-md-block mb-5 p-2">
                 <div class="container-fluid">
                     <span class="navbar-text d-none d-md-block">
-                        <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="40px"> Crypto In Time
+                        <img src="images/CIT-LOGO-SOLO.png" alt="logo" width="50px"> Crypto In Time
                     </span>
                     <ul class="navbar-nav">
                       <li class="nav-item">
@@ -112,26 +112,26 @@
                 <div id="promos" class="col-sm-6 col-md-6 col-lg-8 row g-3">
                     <div>
                       <a target="_blank" href="https://www.paypal.com/es/home">
-                        <button class="paypal-button" href="">1 Month 15$ PayPal</button>
+                        <button class="paypal-button" href="">1&nbsp;Month&nbsp;15$<br>PayPal</button>
                       </a>
                       <a target="_blank" href="https://www.skrill.com/en/?gclsrc=ds&gclsrc=ds">
-                        <button class="skrill-button">1 Month 15$ Skrill</button>
+                        <button class="skrill-button">1&nbsp;Month&nbsp;15$<br>Skrill</button>
                       </a>
                     </div>
                     <div>
                       <a target="_blank" href="https://www.paypal.com/es/home">
-                        <button class="paypal-button">3 Months 30$ PayPal</button>
+                        <button class="paypal-button">3&nbsp;Months&nbsp;30$<br>PayPal</button>
                       </a>
                       <a target="_blank" href="https://www.skrill.com/en/?gclsrc=ds&gclsrc=ds">
-                        <button class="skrill-button">3 Months 30$ Skrill</button>
+                        <button class="skrill-button">3&nbsp;Months&nbsp;30$<br>Skrill</button>
                       </a>
                     </div>
                     <div>
                       <a target="_blank" href="https://www.paypal.com/es/home">
-                        <button class="paypal-button">1 Year 100$ PayPal</button>
+                        <button class="paypal-button">1&nbsp;Year&nbsp;100$<br>PayPal</button>
                       </a>
                       <a target="_blank" href="https://www.skrill.com/en/?gclsrc=ds&gclsrc=ds">
-                        <button class="skrill-button">1 Year 100$ Skrill</button>
+                        <button class="skrill-button">1&nbsp;Year&nbsp;100$<br>Skrill</button>
                       </a>
                     </div>
                 </div>
